clusters/dijkstra/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 0
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-data
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: movies
          persistentVolumeClaim:
            claimName: jellyfin-movies-pvc
        - name: shows
          persistentVolumeClaim:
            claimName: jellyfin-shows-pvc
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:unstable
          imagePullPolicy: Always
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: cache
              mountPath: /cache
            - name: movies
              mountPath: /movies
              readOnly: true
            - name: shows
              mountPath: /shows
              readOnly: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1536Mi"
              cpu: "4000m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: jellyfin
  labels:
    app: seerr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      containers:
        - name: seerr
          image: seerr/seerr:latest
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: data
              mountPath: /app/config
          resources:
            requests:
              memory: "64Mi"
              cpu: "20m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: seerr-data-pvc
