clusters/dijkstra/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "jellyfin"
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: jellyfin
spec:
  selector:
    app: seerr
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5055
