clusters/dijkstra/jellyfin/lsio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-lsio
  namespace: jellyfin
  labels:
    app: jellyfin-lsio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-lsio
  template:
    metadata:
      labels:
        app: jellyfin-lsio
    spec:
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-lsio-data-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: jellyfin-movies-pvc
        - name: shows
          persistentVolumeClaim:
            claimName: jellyfin-shows-pvc
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /movies
              readOnly: true
            - name: shows
              mountPath: /shows
              readOnly: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1536Mi"
              cpu: "4000m"
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-lsio
  namespace: jellyfin
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "jellyfin-lsio"
spec:
  selector:
    app: jellyfin-lsio
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-lsio
  namespace: jellyfin
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "jellyfin-lsio.nkmrk.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin-lsio
          port: 80
